# soroban-sdk-tools

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TRANCHE_ONE.md  justfile  rust-toolchain.toml
docs/: blog-post-composable-contracts.md  blog-post-rust-generalization.md  case-study.html  conference-paper.md  examples.html  index.html  migration.html  oz-comparison.md  script.js  (+1 more)
examples/auth/token/: Cargo.toml
examples/auth/token/src/: lib.rs
examples/errors/calc/: Cargo.toml
examples/errors/calc/src/: lib.rs  test.rs
examples/errors/errors/: Cargo.toml
examples/errors/errors/src/: lib.rs  test.rs
examples/increment/: Cargo.toml
examples/increment/src/: lib.rs  test.rs
examples/soroban-examples/: Cargo.toml  NOTICE
examples/soroban-examples/account/: Cargo.toml
examples/soroban-examples/account/src/: lib.rs  test.rs
examples/soroban-examples/alloc/: Cargo.toml
examples/soroban-examples/atomic_multiswap/: Cargo.toml
examples/soroban-examples/atomic_multiswap/src/: lib.rs  test.rs
examples/soroban-examples/atomic_swap/: Cargo.toml
examples/soroban-examples/atomic_swap/src/: test.rs
examples/soroban-examples/auth/: Cargo.toml
examples/soroban-examples/auth/src/: lib.rs  test.rs
examples/soroban-examples/bls_signature/: Cargo.toml
examples/soroban-examples/bls_signature/src/: lib.rs  test.rs
examples/soroban-examples/cross_contract/contract_a/: Cargo.toml
examples/soroban-examples/cross_contract/contract_b/: Cargo.toml
examples/soroban-examples/cross_contract/contract_b/src/: lib.rs  test.rs
examples/soroban-examples/custom_types/: Cargo.toml
examples/soroban-examples/custom_types/src/: lib.rs
examples/soroban-examples/deep_contract_auth/: Cargo.toml
examples/soroban-examples/deployer/contract/: Cargo.toml
examples/soroban-examples/deployer/contract/src/: lib.rs
examples/soroban-examples/deployer/deployer/: Cargo.toml
examples/soroban-examples/deployer/deployer/src/: lib.rs  test.rs
examples/soroban-examples/errors/: Cargo.toml
examples/soroban-examples/errors/src/: lib.rs
examples/soroban-examples/eth_abi/: Cargo.toml
examples/soroban-examples/eth_abi/src/: lib.rs
examples/soroban-examples/events/: Cargo.toml
examples/soroban-examples/events/src/: lib.rs  test.rs
examples/soroban-examples/fixtures/: soroban_deployer_test_contract.wasm  soroban_groth16_verifier_contract.wasm  soroban_upgradeable_contract_new_contract.wasm
examples/soroban-examples/fuzzing/: Cargo.toml
examples/soroban-examples/fuzzing/fuzz/: Cargo.toml
examples/soroban-examples/fuzzing/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
examples/soroban-examples/fuzzing/src/: lib.rs  proptest.rs
examples/soroban-examples/groth16_verifier/: Cargo.toml
examples/soroban-examples/groth16_verifier/src/: lib.rs
examples/soroban-examples/hello_world/: Cargo.toml
examples/soroban-examples/increment/: Cargo.toml
examples/soroban-examples/increment/src/: lib.rs
examples/soroban-examples/increment_with_fuzz/: Cargo.toml
examples/soroban-examples/increment_with_fuzz/fuzz/: Cargo.toml
examples/soroban-examples/increment_with_pause/: Cargo.toml
examples/soroban-examples/increment_with_pause/src/: lib.rs  test_real.rs
examples/soroban-examples/liquidity_pool/: Cargo.toml
examples/soroban-examples/liquidity_pool/src/: lib.rs  test.rs
examples/soroban-examples/logging/: Cargo.toml
examples/soroban-examples/merkle_distribution/: Cargo.toml
examples/soroban-examples/merkle_distribution/src/: lib.rs  test.rs
examples/soroban-examples/mint-lock/: Cargo.toml
examples/soroban-examples/mint-lock/src/: lib.rs  test.rs
examples/soroban-examples/other_custom_types/: Cargo.toml
examples/soroban-examples/other_custom_types/src/: lib.rs
examples/soroban-examples/pause/: Cargo.toml
examples/soroban-examples/pause/src/: lib.rs
examples/soroban-examples/privacy-pools/: Cargo.toml
examples/soroban-examples/privacy-pools/contract/: Cargo.toml
examples/soroban-examples/privacy-pools/contract/src/: lib.rs  test.rs
examples/soroban-examples/privacy-pools/libs/lean-imt/: Cargo.toml
examples/soroban-examples/privacy-pools/libs/zk/: Cargo.toml
examples/soroban-examples/privacy-pools/libs/zk/src/: lib.rs  test.rs
examples/soroban-examples/simple_account/: Cargo.toml
examples/soroban-examples/simple_account/src/: lib.rs
examples/soroban-examples/single_offer/: Cargo.toml
examples/soroban-examples/single_offer/src/: lib.rs  test.rs
examples/soroban-examples/timelock/: Cargo.toml
examples/soroban-examples/timelock/src/: lib.rs  test.rs
examples/soroban-examples/token/: Cargo.toml
examples/soroban-examples/token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  storage_types.rs  test.rs
examples/soroban-examples/ttl/: Cargo.toml
examples/soroban-examples/ttl/src/: lib.rs  test.rs
examples/soroban-examples/upgradeable_contract/new_contract/: Cargo.toml
examples/soroban-examples/upgradeable_contract/new_contract/src/: lib.rs
examples/soroban-examples/upgradeable_contract/old_contract/: Cargo.toml
examples/soroban-examples/upgradeable_contract/old_contract/src/: lib.rs  test.rs
examples/soroban-examples/workspace/: Cargo.toml
examples/soroban-examples/workspace/contract_a/: Cargo.toml
examples/soroban-examples/workspace/contract_a_interface/: Cargo.toml
examples/soroban-examples/workspace/contract_b/: Cargo.toml
soroban-sdk-tools/: CHANGELOG.md  Cargo.toml  README.md
soroban-sdk-tools-macro/: CHANGELOG.md  Cargo.toml
soroban-sdk-tools-macro/src/: contract.rs  contractimport.rs  error.rs  lib.rs  storage.rs  util.rs
soroban-sdk-tools-macro/src/storage/: common.rs  module.rs  single.rs
soroban-sdk-tools/src/: auth.rs  error.rs  key.rs  lib.rs  storage.rs
soroban-sdk-tools/src/auth/: builder.rs  signers.rs
soroban-sdk-tools/src/storage/: item.rs  map.rs  types.rs
soroban-sdk-tools/tests/: auth_tests.rs  error_integration_tests.rs  key_tests.rs  key_view_tests.rs  module_aggregation_tests.rs  real_auth_tests.rs  storage_tests.rs  symbolic_tests.rs  xdr_builder_tests.rs
(+143 files in other folders)
