[workspace]
members = [
    "soroban-sdk-tools",
    "soroban-sdk-tools-macro",
    "examples/*/Cargo.toml",
    "examples/errors/*",
    "examples/auth/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Blaine Heffron", "Willem Wyndham"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/blaineheffron/soroban-sdk-tools"

[workspace.dependencies]
soroban-sdk = "25.0.2"
soroban-sdk-tools = { path = "soroban-sdk-tools", version = "0.1.0" }
soroban-sdk-tools-macro = { path = "soroban-sdk-tools-macro", version = "0.1.0" }

# Macro dependencies
syn = { version = "2.0.114", features = ["full", "extra-traits"] }
quote = "1.0.43"
proc-macro2 = "1.0"
darling = "0.23.0"
soroban-spec = "23.4.1"
soroban-spec-rust = "23.4.1"
stellar-xdr = { version = "=23.0.0", default-features = false, features = [
    "curr",
] }


[profile.contract]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# [profile.release-with-logs]
# inherits = "release"
# debug-assertions = true
