[package]
name = "soroban-sdk-tools-macro"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Procedural macros for soroban-sdk-tools"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
heck = "0.5.0"
soroban-spec = { workspace = true }
soroban-spec-rust = { workspace = true }
stellar-xdr = { workspace = true }
sha2 = "0.10"
