[package]
name = "soroban-sdk-tools"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Enhanced tools for Soroban smart contract development"
readme = "../README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-sdk-tools-macro = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-sdk-tools = { path = ".", features = ["testutils"] }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
std = []  # Enable for proc macro usage where std is available
testutils = [
    "soroban-sdk/testutils",
    "dep:ed25519-dalek",
    "dep:k256",
    "dep:p256",
    "dep:rand",
]
