[package]
name = "soroban-atomic-multiswap-contract"
version = "0.0.0"
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk-tools = { workspace = true }
soroban-sdk = { workspace = true }
soroban-atomic-swap-contract = { path = "../atomic_swap" }

[dev-dependencies]
soroban-sdk-tools = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
assert_unordered = "0.3.5"
