[package]
name = "soroban-bls-signature"
version = "0.0.0"
edition = "2021"
publish = false
rust-version.workspace = true
description = """
WARNING: DO NOT USE THIS LIBRARY IN PRODUCTION OR FOR SECURE APPLICATIONS!

This Rust library is a prototype for demonstrating BLS signature verification capabilities in Soroban.
It is NOT designed to be secure and should NOT be used in real-world cryptographic or security-sensitive applications.

USE THIS CODE AT YOUR OWN RISK.
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk-tools = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk-tools = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
hex-literal = { version = "0.4.1"}
rand = { version = "0.7.3" }
