[package]
name = "soroban-simple-account-contract"
version = "0.0.0"
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk-tools = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk-tools = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
