[package]
name = "lean-imt"
version = "0.1.0"
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk-tools = { workspace = true }
soroban-sdk = { workspace = true }
soroban-poseidon = { workspace = true }

[dev-dependencies]
soroban-sdk-tools = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
